# PAMtools

./: .buildinfo  README.html  README.md  README.rst  __about__.py  genindex.html  index.html  matpam.html  module.html  objects.inv  pypam.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: docs.yml
_sources/: README.rst.txt  index.rst.txt  matpam.rst.txt
_sources/tutorial/: pamtools_tutorial.ipynb.txt
docs/source/: README.rst  conf.py  index.rst  matpam.rst  module.rst  pypam.rst
docs/source/tutorial/: pamtools_tutorial.ipynb
docs/source/tutorial/data/: P91_D23_A31_Atto550_647N.json  fcs.txt  fcs_param.txt  hist2d.json  timetrace_GG.json  timetrace_GR.json
matpam/: extract_2Dplot.m  extract_bursts.m  write_FCS.m
matpam/irf/: scatter.scat
matpam/models/: FCS_D_2trip_nogamma.txt  FCS_D_nogamma.txt  FCS_D_nogamma_green.txt
pypam/: __init__.py  pamplot.py  photon.py
src/pamtools/matpam/: extract_2Dplot.m  extract_timetrace.m
src/pamtools/matpam/irf/: ErythrosinB.irf
src/pamtools/matpam/models/: FCS_D_nogamma_red.txt
src/pamtools/matpam/profiles/: PIE.mat
src/pamtools/pypam/: __init__.py  pamplot.py
tutorial/: PAMtools_tutorial.ipynb  pamtools_tutorial.html
